# pallada_tgbot

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: __init__.py  main.py  states.py
app/routers/: user.py
app/services/: search_results.py
app/services/parsers/: group_parser.py
cache/: group_13087.json  group_13517.json  group_13518.json  group_13891.json  group_13897.json  group_13925.json  professor_2456.json  professor_3510.json  professor_3629.json  professor_3964.json  professor_4332.json  search_results.json
database/: users.json
src/: keyboards.py
src/routers/: user.py
src/services/: notification_processor.py  search_results.py
src/services/parsers/: group_parser.py  professor_parser.py
tests/: __init__.py
