[project]
name = "pallada-tgbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram (>=3.17.0,<4.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "rapidfuzz (>=3.12.1,<4.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "requests (>=2.32.3,<3.0.0)",
    "g4f (>=0.4.5.0,<0.5.0.0)",
    "gcsa (>=2.5.1,<3.0.0)",
]
